# git-ls

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  deny.toml  justfile  prek.toml  release-plz.toml  typos.toml
.agents/plans/: modularisation-and-coverage-plan.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: app.rs  backend.rs  cli.rs  error.rs  lanes.rs  lib.rs  main.rs  model.rs  render.rs  terminal.rs  test_support.rs  tests.rs
src/app/: env.rs  tests.rs
src/backend/: gix.rs  metadata.rs  mod.rs  process.rs  shell.rs  tests.rs  traits.rs
src/cli/: args.rs  config.rs  defaults.rs  runtime.rs  values.rs
src/lanes/: tests.rs
src/render/: branch.rs  colours.rs  context.rs  graph.rs  layout.rs  line.rs  metadata.rs  orphan.rs  rewrite.rs  tests.rs  trunk.rs
src/render/tests/: colours.rs  columns.rs  graph.rs  layout.rs  line.rs  metadata.rs  orphan.rs  rewrite.rs  trunk.rs
src/terminal/: detect.rs
tests/: cli.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  git.rs  main.rs  manifest.rs  policy.rs  version.rs
