[package]
name = "git-ls"
version = "0.8.3"
edition = "2024"
rust-version = "1.88"
description = "Graphite-style stack lane renderer for git-branchless"
license = "GPL-3.0-only"
repository = "https://github.com/duanyutong/git-ls"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["branchless", "cli", "git", "stack"]

[workspace]
members = [".", "xtask"]
resolver = "3"

[dependencies]
anstyle = "1.0.14"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
gix = { version = "0.84.0", default-features = false, features = [
    "max-performance-safe",
    "revision",
    "sha1",
] }
thiserror = "2.0.18"

[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = [
    "build",
    "cargo",
    "rustc",
] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
dbg_macro = "deny"
expect_used = "warn"
panic = "warn"
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
# Pedantic lints that are too noisy for this CLI's current public surface.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Nursery lints that create churn without improving this small command.
cognitive_complexity = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
